fix: collapsible jiggle, scrolling container & scrollbar style

--- a/src/app/tailwind.css
+++ b/src/app/tailwind.css
@@ -69,4 +69,10 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  .overflow-auto,
+  .overflow-scroll {
+    scrollbar-color: hsl(var(--secondary)) transparent;
+    scrollbar-width: thin;
+  }
 }
